# easycit

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
easycit/: cli.py
examples/: urls.txt
resources/: citations.txt
tests/: test_easycit.py
