[project]
name = "easycit"
version = "0.1"
description = "Easily create citations from website URLs"
readme = "README.md"
authors = [{name = "Scott Carvalho"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "click"
]

[project.urls]
Homepage = "https://github.com/Scarvy/easycit"
Changelog = "https://github.com/Scarvy/easycit/releases"
Issues = "https://github.com/Scarvy/easycit/issues"
CI = "https://github.com/Scarvy/easycit/actions"

[project.entry-points.console_scripts]
easycit = "easycit.cli:cli"

[project.optional-dependencies]
test = ["pytest"]
