[tool.poetry]
name = "easycit"
version = "0.1.0"
description = "Easily create citations from URLs"
authors = ["Scott Carvalho <scottcarvalho71@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
click-default-group = "^1.2.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
easycit = 'easycit.cli:cli'
